<resources>
    <string name="app_name">SoundCloud</string>
    <string name="appbar_scrolling_view_behavior" translatable="false">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="navigation_drawer_open">Mở navigation drawer</string>
    <string name="navigation_drawer_close">Đóng navigation drawer</string>
    <string name="nav_header_title">Dong Hien</string>
    <string name="nav_header_subtitle">hien.mit.3009</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Cài đặt</string>
    <string name="tittle_offline">Của tui</string>
    <string name="tittle_online">Trực tuyến</string>
    <string name="action_synchronized">Đồng bộ</string>
    <string name="action_timer">Hẹn giờ</string>
    <string name="action_rate_app">Đánh giá ứng dụng</string>
    <string name="action_app_information">Thông tin ứng dụng</string>
    <string name="action_guide">Hướng dẫn và hỗ trợ</string>
    <string name="action_setting">Cài đặt</string>
    <string name="action_log_out">Đăng xuất</string>
    <string name="tittle_genres">Thể loại: </string>
    <string name="text_real_time">00:00</string>
    <string name="text_total_time">00:00</string>
    <string name="message_error_path">Lỗi đường dẫn</string>
    <string name="date_time">mm:ss</string>
    <string-array name="type_song">
        <item>Tất cả</item>
        <item>Quê hương</item>
        <item>Trữ tình</item>
        <item>Nhạc trẻ</item>
    </string-array>
</resources>
