<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_sync"
            android:icon="@drawable/sync"
            android:title="@string/action_synchronized" />
        <item
            android:id="@+id/nav_time"
            android:icon="@drawable/oclock"
            android:title="@string/action_timer" />
        <item
            android:id="@+id/nav_vote"
            android:icon="@drawable/rate"
            android:title="@string/action_rate_app" />
        <item
            android:id="@+id/nav_info"
            android:icon="@drawable/info"
            android:title="@string/action_app_information" />
        <item
            android:id="@+id/nav_guide"
            android:icon="@drawable/guide"
            android:title="@string/action_guide" />
        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/setting"
            android:title="@string/action_setting" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/logout"
            android:title="@string/action_log_out" />
    </group>

</menu>
